color contrast fix on attraksjon page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -651,7 +651,7 @@ input[type="radio"]{
 }
 
 #tre{
-    background-color: #9c908d;
+    background-color: #3F3937;
 }
 
 
